force-app/main/default/objects/Transaction_Item_Type_Config__mdt/Transaction_Item_Type_Config__mdt.object-meta.xml
<CustomObject>
    <description>Transaction item type config e.g., to track the item type that will be converted to be a Prepayment transaction payment.</description>
    <label>Transaction Item Type Config</label>
    <pluralLabel>Transaction Item Type Config</pluralLabel>
</CustomObject>