force-app/main/default/objects/Transaction_Item_Type_Config__mdt/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <description>The Item Type picklist option API value to be created as prepayment payment record.</description>
    <inlineHelpText>The Item Type picklist option API value to be created as prepayment payment record.</inlineHelpText>
    <label>Item Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>