force-app/main/default/objects/Transaction_Item_Type_Config__mdt/fields/Payment_Applicable_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Applicable_Item_Type__c</fullName>
    <description>A semi-colon separated value to be set on the transaction payment’s applicable type when the new prepayment is created.</description>
    <inlineHelpText>A semi-colon separated value to be set on the transaction payment’s applicable type when the new prepayment is created.</inlineHelpText>
    <label>Payment Applicable Item Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>