force-app/main/default/objects/Transaction_Item_Type_Config__mdt/fields/Payment_Refundable__c.field-meta.xml
<CustomField>
    <fullName>Payment_Refundable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The refundable checkbox to be set on transaction payment’s refundable when the new prepayment is created.</description>
    <inlineHelpText>The refundable checkbox to be set on transaction payment’s refundable when the new prepayment is created.</inlineHelpText>
    <label>Payment Refundable</label>
    <type>Checkbox</type>
</CustomField>