force-app/main/default/objects/Transaction_Item_Type_Config__mdt/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>The status to be set on transaction payment’s status when the new prepayment is created.</description>
    <inlineHelpText>The status to be set on transaction payment’s status when the new prepayment is created.</inlineHelpText>
    <label>Payment Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>