force-app/main/default/objects/Transaction_Item_Type_Config__mdt/fields/Payment_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction_Type__c</fullName>
    <description>The transaction type to be set on transaction payment’s transaction type when the new prepayment is created.</description>
    <inlineHelpText>The transaction type to be set on transaction payment’s transaction type when the new prepayment is created.</inlineHelpText>
    <label>Payment Transaction Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>