force-app/main/default/objects/Transaction_Item_Type_Config__mdt/fields/Support_Prepayment_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Support_Prepayment_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the item type needs to be converted as prepayment transaction payment when fully paid.</description>
    <label>Support Prepayment Conversion</label>
    <type>Checkbox</type>
</CustomField>