force-app/main/default/objects/Transaction_Item_Type_Config__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Item_Type__c</columns>
    <columns>Payment_Applicable_Item_Type__c</columns>
    <columns>Payment_Refundable__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Payment_Transaction_Type__c</columns>
    <columns>Support_Prepayment_Conversion__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>